--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: a.rhykerw@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Jekyll site for the teenageclub discord server
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ranger-4297.github.io/TeenageClub/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ranger_4297
 github_username:  Ranger-4297
 
